--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,12 @@
 {
     "name": "reves/val",
-    "description": "Backend PHP framework",
+    "description": "Backend PHP Framework",
+    "keywords": ["ley", "framework"],
+    "license": "MIT",
     "type": "library",
     "require": {
-        "php": ">=8.0",
-        "maxmind-db/reader": "^1.10"
+        "php": "^8.0"
     },
-    "authors": [
-        {
-            "name": "Constantin Miron",
-            "email": "mc.reves@gmail.com"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "Val\\": "src/"
