--- a/src/Console/create/migrations/CreateAuthSessionsTable.php.example
+++ b/src/Console/create/migrations/CreateAuthSessionsTable.php.example
@@ -9,18 +9,18 @@ Class CreateAuthSessionsTable Implements MigrationInterface
     {
         DB::raw('
             CREATE TABLE IF NOT EXISTS `' . Config::db('table_auth') . '` (
-                `Id` bigint(20) unsigned NOT NULL AUTO_INCREMENT,
-                `AccountId` bigint(20) unsigned NOT NULL,
+                `Id` binary(16) NOT NULL,
+                `AccountId` bigint unsigned NOT NULL,
                 `DeviceType` varchar(63) DEFAULT NULL,
                 `DevicePlatform` varchar(63) DEFAULT NULL,
                 `DeviceBrowser` varchar(63) DEFAULT NULL,
-                `SignedInAt` varchar(63) DEFAULT NULL,
-                `LastSeenAt` varchar(63) DEFAULT NULL,
+                `SignedInAt` datetime NOT NULL,
+                `LastSeenAt` datetime NOT NULL,
                 `SignedInIPAddress` varbinary(16) DEFAULT NULL,
                 `LastSeenIPAddress` varbinary(16) DEFAULT NULL,
                 PRIMARY KEY (`Id`),
                 KEY `AccountId` (`AccountId`)
-            ) ENGINE=InnoDB;'
+            );'
         );
     }
 
@@ -30,3 +30,7 @@ Class CreateAuthSessionsTable Implements MigrationInterface
     }
 
 }
+
+
+
+
